--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,22 @@
             <artifactId>hutool-all</artifactId>
             <version>5.1.1</version>
         </dependency>
+
+
+
+
+
+
+
+
+
+
+        <!--hutool工具类-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.1.1</version>
+        </dependency>
         <!--web依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
